tests/expectations/compiler/dynamic_dispatch/dynamic_contains_wrong_arg_type_fail.out
Error [ETYC0372117]: Expected `field` or `identifier` but type `u64` was found.
    --> compiler-test:11:42
     |
  11 |     let exists: bool = _dynamic_contains(42u64, 0field, 0field, key);
     |                                          ^^^^^
